{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 21,
  "lineage": "125b0f0a-930a-e847-d624-80907632fef3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "task15_wordpress_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a9a48ce4458e384e",
            "arn": "arn:aws:ec2:us-east-1:816069164153:instance/i-012a07ca78433ae6f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012a07ca78433ae6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-091b132106e8f7c87",
            "private_dns": "ip-10-10-10-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.5",
            "public_dns": "ec2-54-234-222-122.compute-1.amazonaws.com",
            "public_ip": "54.234.222.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b326339edd1eb071",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d1fe017601ad819",
            "tags": {
              "Name": "task15-wordpress-ec2"
            },
            "tags_all": {
              "Name": "task15-wordpress-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c89c83982d754d2"
            ]
          },
          "dependencies": [
            "aws_db_instance.task15_wordpress_db",
            "aws_db_subnet_group.task15_db_subnets",
            "aws_security_group.task15_db_sg",
            "aws_security_group.task15_ec2_sg",
            "aws_sns_topic.task15_wordpress_sns",
            "aws_subnet.task15_private_subnet1",
            "aws_subnet.task15_private_subnet2",
            "aws_subnet.task15_public_subnet",
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "task15_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:internet-gateway/igw-0002a87a240f6db97",
            "id": "igw-0002a87a240f6db97",
            "owner_id": "816069164153",
            "tags": {
              "Name": "task15-igw"
            },
            "tags_all": {
              "Name": "task15-igw"
            },
            "vpc_id": "vpc-03949864f3718be40"
          },
          "dependencies": [
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "task15_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:816069164153:targetgroup/task15-alb-tg/fdc2ebd5c25a6ce6",
            "arn_suffix": "targetgroup/task15-alb-tg/fdc2ebd5c25a6ce6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:816069164153:targetgroup/task15-alb-tg/fdc2ebd5c25a6ce6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "task15-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "task15-alb-tg"
            },
            "tags_all": {
              "Name": "task15-alb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03949864f3718be40"
          },
          "dependencies": [
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "task15_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:route-table/rtb-0ee9b2e29fa0f13e0",
            "id": "rtb-0ee9b2e29fa0f13e0",
            "owner_id": "816069164153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0002a87a240f6db97",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task15-public-rt"
            },
            "tags_all": {
              "Name": "task15-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03949864f3718be40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.task15_igw",
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "task15_jump_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064bde61cccb1771e",
            "route_table_id": "rtb-0ee9b2e29fa0f13e0",
            "subnet_id": "subnet-0707dc26405a61e87"
          },
          "dependencies": [
            "aws_internet_gateway.task15_igw",
            "aws_route_table.task15_public_rt",
            "aws_subnet.task15_jump_subnet",
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "task15_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f5456e1e50df085",
            "route_table_id": "rtb-0ee9b2e29fa0f13e0",
            "subnet_id": "subnet-06d1fe017601ad819"
          },
          "dependencies": [
            "aws_internet_gateway.task15_igw",
            "aws_route_table.task15_public_rt",
            "aws_subnet.task15_public_subnet",
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task15_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:security-group/sg-0c127028c0f640c8c",
            "description": "Allow MySQL access from the WordPress EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c127028c0f640c8c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL access from WordPress EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04c89c83982d754d2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "task15-db-sg",
            "name_prefix": "",
            "owner_id": "816069164153",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03949864f3718be40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.task15_ec2_sg",
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "task15_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:security-group/sg-04c89c83982d754d2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c89c83982d754d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.10.10.16/28"
                ],
                "description": "Allow SSH access from jump subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "task15-ec2-sg",
            "name_prefix": "",
            "owner_id": "816069164153",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03949864f3718be40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task15_jump_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:subnet/subnet-0707dc26405a61e87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0707dc26405a61e87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069164153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task15-jump-subnet"
            },
            "tags_all": {
              "Name": "task15-jump-subnet"
            },
            "vpc_id": "vpc-03949864f3718be40"
          },
          "dependencies": [
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task15_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:subnet/subnet-02d7c8202c111b2b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d7c8202c111b2b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069164153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task15-private-subnet-1"
            },
            "tags_all": {
              "Name": "task15-private-subnet-1"
            },
            "vpc_id": "vpc-03949864f3718be40"
          },
          "dependencies": [
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task15_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:subnet/subnet-093582ee7a2e0d9a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.10.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093582ee7a2e0d9a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816069164153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task15-private-subnet-2"
            },
            "tags_all": {
              "Name": "task15-private-subnet-2"
            },
            "vpc_id": "vpc-03949864f3718be40"
          },
          "dependencies": [
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "task15_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:subnet/subnet-06d1fe017601ad819",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.10.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d1fe017601ad819",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816069164153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task15-public-subnet"
            },
            "tags_all": {
              "Name": "task15-public-subnet"
            },
            "vpc_id": "vpc-03949864f3718be40"
          },
          "dependencies": [
            "aws_vpc.task15_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task15_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816069164153:vpc/vpc-03949864f3718be40",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.10.0/24",
            "default_network_acl_id": "acl-09b8adb9de2d6a722",
            "default_route_table_id": "rtb-058df56c072e462c9",
            "default_security_group_id": "sg-0f3e3c3b8040e549a",
            "dhcp_options_id": "dopt-00141fe49c93ae4b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03949864f3718be40",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058df56c072e462c9",
            "owner_id": "816069164153",
            "tags": {
              "Name": "task15-vpc"
            },
            "tags_all": {
              "Name": "task15-vpc"
            }
          }
        }
      ]
    }
  ]
}